06-flex-layout - completed - 31.3.24 this one was alot of fun. i had to google a few things but sussed it out in the end. using the pre made div of 'header' i added a display flex and justify content space between to get the links into there postions. i then targeted the .header .left/right links to give them there padding and gap. to get the footer in the correct place i repeated what i just did but used footer instead. for the content i added a display flex and a flex direection column to get all the content aligned in a column aposed to the standard row, i then used align items center to get the desired look. but by far the most interesting part for me was getting the footer at the bottom of the page, todo this i went to the body and added a min height of 100vh this means the minimum height of an element should be 100% of the viewport height 'yes i googled it' next i added display flex and a flex direction column to complete this and somehow it worked. really enjoyed this one.

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
-  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+
+  /*min-height: 100vh;
+  display: flex;
+  flex-direction: column;*/
 }
 
 img {
@@ -24,4 +30,53 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+  padding: 0px;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+}
+
+.header .left-links{
+  padding-left: 10px;
+  gap: 10px;
+}
+
+.header .right-links{
+  padding-right: 10px;
+  gap: 10px;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer{
+  margin-top: auto;
+  display: flex;
+  justify-content: space-between;
+  background-color: #eeeeee;
+}
+
+.footer .left-links{
+  padding-left: 10px;
+  gap: 10px;
+}
+
+.footer .right-links{
+  padding-right: 10px;
+  gap: 10px;
 }
